--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
@@ -50,7 +49,10 @@
 
         <service android:name=".service.TestService" />
 
-        <activity android:name=".anim.BallFallingActivity"></activity>
+        <activity android:name=".anim.BallFallingActivity" />
+        <activity android:name=".anim.VectorActivity" />
+        <activity android:name=".activityoptions.ActOptsActivity" />
+        <activity android:name=".activityoptions.ActOptsSecondActivity"></activity>
     </application>
 
 </manifest>
