--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.facebook.rebound:rebound:0.3.8'
 }
