--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
         <activity android:name=".activityoptions.ActOptsSecondActivity" />
         <activity android:name=".nestedscroll.NestedScrollActivity" />
         <activity android:name=".TextImageSpanActivity" />
-        <activity android:name=".anim.ReboundActivity"></activity>
+        <activity android:name=".anim.ReboundActivity" />
+        <activity android:name=".BottomNavigationBarActivity"></activity>
     </application>
 
 </manifest>
