--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.rent.mytestapplication"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -43,8 +45,8 @@ dependencies {
 
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
 
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-//    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+//    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
 
@@ -59,4 +61,5 @@ dependencies {
     compile 'com.facebook.rebound:rebound:0.3.8'
 
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
+    compile 'com.android.support:support-dynamic-animation:25.3.0'
 }
